add tokenendpoint for services
